--- a/whonix_workstation/usr/share/whonix/home/.xchat2/xchat.conf
+++ b/whonix_workstation/usr/share/whonix/home/.xchat2/xchat.conf
@@ -20,7 +20,7 @@ net_proxy_use = 0
 # It is called stream isolation. We use IsolateSOCKSAuth, 
 # see https://www.torproject.org/docs/tor-manual-dev.html.en
 # The password is actually not required, but it does not hurt either.
-# Will probable not hurt on Tor 0.2.2 and below.
+# Will probably not hurt on Tor 0.2.2 and below.
 # Works with Tor 0.2.3 and above.
 #
 # /set net_proxy_auth 1
@@ -42,7 +42,7 @@ net_proxy_user = XChat
 # /set irc_hide_version ON
 # /set identd OFF <-- NOT working on all XChat-based IRC software.
 # But still highly suggested to include & use it.
-# Probable not needed on UNIX, source: http://xchat.org/faq/#q21 
+# Probably not needed on UNIX, source: http://xchat.org/faq/#q21 
 dcc_auto_chat = 0
 dcc_auto_resume = 0
 dcc_auto_send = 0
