--- a/whonix_workstation/usr/share/whonix/home/.gnupg/gpg.conf
+++ b/whonix_workstation/usr/share/whonix/home/.gnupg/gpg.conf
@@ -73,8 +73,8 @@
 #
 # Any time "mynames" is a recipient (-r or --recipient), it will be
 # expanded to the names "paige", "joe", and "patti", and the key ID
-# "0x12345678".  Note there is only one level of expansion - you
-# cannot make an group that points to another group.  Note also that
+# "0x12345678".  Note that there is only one level of expansion - you
+# cannot make a group that points to another group.  Note also that
 # if there are spaces in the recipient name, this will appear as two
 # recipients.  In these cases it is better to use the key ID.
 
